# llama-project

./: .dockerignore  .gitignore  Dockerfile.fastapi  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: api.py  frontend.py  gpt_model.py  main.py  main_frontend.py  ollama_model.py  pdf_frontend.py  query_data.py  simple_frontend.py  vector_db.py
